| Summary: | ASTERISK-25442: using realtime (mysql) queue members are never updated in wait_our_turn function (app_queue.c) | ||
| Reporter: | Carlos Oliva (coliva) | Labels: | |
| Date Opened: | 2015-10-02 06:15:57 | Date Closed: | 2020-01-14 11:13:48.000-0600 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Applications/app_queue |
| Versions: | 1.8.25.0 13.4.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Debian 7.9 | Attachments: | |
| Description: | using realtime (mysql) queue members are never updated in wait_our_turn function (app_queue.c)
Asterisk never refreshes queue members from db until another event occurs (for example a new call joins the queue or a queue show is executed in cli) This issue causes that if a call enters the queue and a new queue member is inserted in database after it, this member never will receive the call until new call joins the queue | ||
| Comments: | By: Asterisk Team (asteriskteam) 2015-10-02 06:15:58.870-0500 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. By: Carlos Oliva (coliva) 2015-10-02 06:24:57.054-0500 This issue can be easily avoided adding in wait_our_turn function of app_queue.c the line update_realtime_members(qe->parent); inside the infinite loop. It can increase the database load, so I think should be better if this update is done for example each 5 iterations of the loop (more or less each 5 seconds) I'll try to make a code contribution By: Rusty Newton (rnewton) 2015-10-06 09:49:59.305-0500 Thanks for the contribution! If you'd like your contribution to be included faster, you should submit your patch for code review by the Asterisk Developer Community. To do so, please follow the Code Review [1] instructions on the wiki. Be sure to: * Verify that your patch conforms to the Coding Guidelines [2] * Review the Code Review Checklist [3] for common items reviewers will look for * If necessary, provide tests for the Asterisk Test Suite that verify the correctness of your patch [4] When ready, submit your patch and any tests to Gerrit [5] for code review. Thanks! [1] https://wiki.asterisk.org/wiki/display/AST/Code+Review [2] https://wiki.asterisk.org/wiki/display/AST/Coding+Guidelines [3] https://wiki.asterisk.org/wiki/display/AST/Code+Review+Checklist [4] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Test+Suite+Documentation [5] https://wiki.asterisk.org/wiki/display/AST/Gerrit+Usage By: Asterisk Team (asteriskteam) 2015-10-20 12:00:19.786-0500 Suspended due to lack of activity. This issue will be automatically re-opened if the reporter posts a comment. If you are not the reporter and would like this re-opened please create a new issue instead. If the new issue is related to this one a link will be created during the triage process. Further information on issue tracker usage can be found in the Asterisk Issue Guidlines [1]. [1] https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines | ||