app_queue: Ensure realtime members are updated if there is a call in a queue

If a call enters on a queue and the members on that queue are updated in
realtime (ex: using mysql inserting a new agent) the queue members are never
refreshed and the call will stay in the queue until other event occurs
(ex: a new call joins queue)
This patch prevent this issue, ensuring realtime members are update each 5
iterations of the call (mainly each 5 seconds)

ASTERISK-25442#close

Change-Id: If1e036d013a5c1d8b0bf60d71d48fe98694a8682