apps/app_queue.c
@@ -5267,6 +5267,7 @@ static void update_qe_rule(struct queue_ent *qe)
 static int wait_our_turn(struct queue_ent *qe, int ringing, enum queue_result *reason)
 {
 	int res = 0;
+	int updRtCount=0;
 
 	/* This is the holding pen for callers 2 through maxlen */
 	for (;;) {
@@ -5333,6 +5334,14 @@ static int wait_our_turn(struct queue_ent *qe, int ringing, enum queue_result *r
 		if (qe->expire && (time(NULL) >= qe->expire)) {
 			*reason = QUEUE_TIMEOUT;
 			break;
+		}
+
+		/* Update realtime members each 5 iterations/seconds */
+		if (updRtCount<5) {
+			updRtCount++;
+		} else {
+			update_realtime_members(qe->parent);
+			updRtCount=0;
 		}
 	}
 
